--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -99,8 +99,7 @@
                         </tr>
                     </table>
                     <%}%>
-                 <% if (data.CompanyID != 20 && data.CompanyID != 19 && data.CompanyID != 64 && data.CompanyID !== 193 && data.CompanyID !== 216 && data.CompanyID !== 218) {%> 
-
+                 <% if (data.CompanyID != 20 && data.CompanyID != 19 && data.CompanyID != 64 && data.CompanyID !== 193 && data.CompanyID !== 216 && data.CompanyID !== 218 && data.CompanyID != 229) {%> 
             <table style="margin-left: -10px; margin-top: -9px;  zoom: 80% !important; ">
  
                 <tr>
@@ -155,6 +154,53 @@
                 </tr>
             </table>
             <%}%>
+
+
+            <% if (data.CompanyID == 229) {%> 
+
+                <table style="margin-left: -10px; margin-top: -9px;  zoom: 80% !important; ">
+     
+                    <tr>
+                        <th  style="width: 140px; padding: 0;">
+                            <div
+                                style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                                <%=i.BarcodeName%>
+                            </div>
+                            <div>
+                                <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
+                                    jsbarcode-textmargin="0" jsbarcode-height="45" jsbarcode-marginTop="-15"
+                                    jsbarcode-fontSize="15" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                    jsbarcode-fontoptions="bold">
+                                </svg>
+                                <script>
+                                    JsBarcode(".barcode").init();
+                                </script>
+                            </div>
+                        </th>
+                        <th  style="width: 220px;">
+    <% if (data.MRPHide == 'true'){%>
+                            <div
+                                style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
+                                           MRP  <%=i.RetailPrice%>          
+                            </div>
+     <%}%> 
+                            <div
+                                style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; font-family: verdana ;">
+                                    (Inc. of all Taxes) 
+                 </div>
+                            <div
+                                style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                                     <%=i.ProductBrandName%>
+                            </div>
+                            <div
+                                style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
+                                <%=i.ProductModelName%>
+                            </div>
+                        </th>
+                    </tr>
+                </table>
+                <%}%>
+
    <% if (data.CompanyID == 193){%> 
                 <table style="margin-left: -10px; margin-top: -9px; width:100%;">
                  <tr>
