--- a/web1/src/app/report/pettycash-report/pettycash-report.component.html
+++ b/web1/src/app/report/pettycash-report/pettycash-report.component.html
@@ -13,7 +13,7 @@
                             </div>
                         </div>
                         <mat-tab-group>
-                            <!-- Loyality  -->
+                            <!-- Petty Cash Report  -->
                             <mat-tab label="Petty Cash Report">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm">
@@ -121,7 +121,7 @@
                                                     Search
                                                 </button>
                                                 <button type="button" 
-                                                    class="me-3 ms-3" mat-raised-button color="warn">
+                                                    class="me-3 ms-3" mat-raised-button color="warn" (click)=" FromReset()">
                                                     Reset
                                                 </button>
 
@@ -198,6 +198,153 @@
                                 </div>
                             </mat-tab>
                        
+
+                            <mat-tab label="Opening Closing Report">
+                                <div class="body">
+                                    <form class="p-3 pb-0" #f2="ngForm">
+                                        <div class="row">
+                                            <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>From</mat-label>
+                                                    <input matInput name="FromDate" type="date"
+                                                        [(ngModel)]="data1.FromDate" required #DOBcontrol />
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>To</mat-label>
+                                                    <input matInput type="date" name="ToDate"
+                                                        [(ngModel)]="data1.ToDate" required />
+                                                </mat-form-field>
+                                            </div>
+                                           
+                                            <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>CashType </mat-label>
+                                                    <mat-select name="CashType " placeholder="CashType "
+                                                        [(ngModel)]="data1.CashType" required>
+                                                        <mat-option [value]="0">All</mat-option>
+                                                        <mat-option value="CashCounter">CashCounter</mat-option>
+                                                        <mat-option value="PettyCash">PettyCash</mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+
+                                            <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
+                                                <mat-form-field class="example-full-width mb-0"
+                                                    *ngIf="user.UserGroup === 'CompanyAdmin'">
+                                                    <mat-label>Shop Name</mat-label>
+                                                    <mat-select name="shopID" [(ngModel)]="data1.ShopID"
+                                                        required>
+                                                        <mat-option [value]=0>All</mat-option>
+                                                        <mat-option [value]="s.ID" *ngFor="let s of shopList">
+                                                            {{s.Name}}
+                                                            <span [style.color]="'blue'"
+                                                                *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                                                        </mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                                <mat-form-field class="example-full-width mb-0"
+                                                    *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                                                    <mat-label>Shop Name</mat-label>
+                                                    <mat-select name="shopID" [(ngModel)]="data1.ShopID"
+                                                        required>
+                                                        <mat-option [value]="s.ID" *ngFor="let s of shopList">
+                                                            {{s.Name}}
+                                                            <span [style.color]="'blue'"
+                                                                *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                                                        </mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+                                      
+                                            <div class="col-xl-3 col-lg-3 col-md-6 col-12 mb-0 ">
+                                                <button [disabled]="!f2.valid" type="submit" mat-raised-button
+                                                    color="primary" (click)=" OpeningClosing()">
+                                                    Search
+                                                </button>
+                                                <button type="button" 
+                                                    class="me-3 ms-3" mat-raised-button color="warn" (click)=" FromReset1()">
+                                                    Reset
+                                                </button>
+
+                                            </div>
+                                        </div>
+                                    </form>
+                                    <!--  list -->
+                                    <div class="body p-2">
+                                        <div id="pettyOC-content" class="col-sm-12"
+                                            style="overflow: auto; height: 450px;">
+                                            <table class="table table-striped table-hover table-sm table-bordered"
+                                                style="border: 2px solid #fff !important;" id="pettyOCExcel">
+                                                <thead>
+                                                   <tr>
+                                                    <th>Sno.</th>
+                                                    <th>ShopName</th>
+                                                    <th>Date</th>
+                                                    <th>OpeningBalance</th>
+                                                    <th>ClosingBalance</th>
+                                                    <th>RegisterType</th>
+                                                    <th>Deposit</th>
+                                                    <th>Withdrawal</th>
+                                                    <th>Sale</th>
+                                                    <th>Employee</th>
+                                                    <th>Expense</th>
+                                                    <th>Payroll</th>
+                                                    <th>Supplier</th>
+                                                    <th>Fitter</th>
+                                                    <th>Doctor</th>
+                                                   </tr>
+                                                   <tr class="totolRow " *ngIf="this.dataList1 != null && this.dataList1 != ''" >
+                                                    <td>
+                                                        <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
+                                                            aria-hidden="true" type="button" (click)="exportAsXLSX1()"> </i>
+                                                            <button class="bg_none ms-2 me-2" (click)="print1()" >
+                                                                <i class="far fa-file-pdf "
+                                                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                            </button>
+
+                                                    </td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                </tr>
+                                                </thead>
+                                                <tbody class="text-center">
+                                                    <tr *ngFor="let data of dataList1; let i = index" text="left">
+                                                        <td>{{ i + 1 }}</td>
+                                                        <td>{{data.ShopName}}</td>
+                                                        <td>{{data.Date}}</td>
+                                                        <td>{{data.OpeningBalance}}</td>
+                                                        <td>{{data.ClosingBalance}}</td>
+                                                        <td>{{data.RegisterType}}</td>
+                                                        <td>{{data.Deposit}}</td>
+                                                        <td>{{data.Withdrawal}}</td>
+                                                        <td>{{data.Sale}}</td>
+                                                        <td>{{data.Employee}}</td>
+                                                        <td>{{data.Expense}}</td>
+                                                        <td>{{data.Payroll}}</td>
+                                                        <td>{{data.Supplier}}</td>
+                                                        <td>{{data.Fitter}}</td>
+                                                        <td>{{data.Doctor}}</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </mat-tab>
                         </mat-tab-group>
                     </div>
                 </div>
