--- a/web1/src/app/report/pettycash-report/pettycash-report.component.html
+++ b/web1/src/app/report/pettycash-report/pettycash-report.component.html
@@ -283,15 +283,15 @@
                                                     <th>Date</th>
                                                     <th>RegisterType</th>
                                                     <th>OpeningBalance</th>
-                                                    <th>Sale</th>
-                                                    <th>Employee</th>
-                                                    <th>Expense</th>
-                                                    <th>Payroll</th>
+                                                    <th>Sale <b style="color:green"> (+)</b></th>
+                                                    <th>Employee<b style="color:rgb(128, 0, 0)"> (-)</b></th>
+                                                    <th>Expense <b style="color:rgb(128, 0, 0)"> (-)</b></th>
+                                                    <th>Payroll <b style="color:rgb(128, 0, 0)"> (-)</b></th>
                                                     <th>Supplier</th>
-                                                    <th>Fitter</th>
-                                                    <th>Doctor</th>
-                                                    <th>Deposit</th>
-                                                    <th>Withdrawal</th>
+                                                    <th>Fitter <b style="color:rgb(128, 0, 0)"> (-)</b></th>
+                                                    <th>Doctor <b style="color:rgb(128, 0, 0)"> (-)</b></th>
+                                                    <th>Deposit<b style="color:green"> (+)</b></th>
+                                                    <th>Withdrawal <b style="color:rgb(128, 0, 0)"> (-)</b></th>
                                                     <th>ClosingBalance</th>
                                                     <th>ShopName</th>
                                                    </tr>
