--- a/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
+++ b/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.html
@@ -120,8 +120,8 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-lg-1 col-md-6 col-6 ms-auto pt-2 p-0">
-                                    <button (click)="openModalS(content1)">Lens Grid</button>
+                                <div class="col-lg-1 col-md-6 col-6 ms-2 pt-1 p-0">
+                                    <button (click)="openModalS(content1)" mat-raised-button color="primary">Lens Grid</button>
                                    
                                 </div>
                                 <div class="col-lg-2 col-md-6 col-6 ms-auto pt-2 p-0" *ngIf="category !== 'Charges'">
@@ -371,7 +371,7 @@
                                 </div>
                                 <div *ngIf="addPurchase" class="col-xl-1 col-lg-1 col-md-1 col-4 mb-0 ml-auto">
                                     <button *ngIf="editBtn === false " class="mr-3" type="submit"
-                                        [disabled]="(!f1.valid || item.Quantity == 0 && this.GstTypeDis) || this.specList == ''"
+                                    [disabled]="item.Quantity === 0 || (!f1.valid && this.GstTypeDis) || this.specList == ''"
                                         mat-raised-button color="primary">Add</button>
                                     <!-- <button *ngIf="editBtn === true" class="mr-3" type="submit" [disabled]=" item.Quantity == 0"
                                         mat-raised-button color="primary" (click)="editUpdate()">Update</button> -->
@@ -870,8 +870,6 @@
 <ng-template #content1 role="document" let-modal>
     <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
         <div class="container">
-
-        
         <div class="row">
             <div class="col-2">
                 <h2 class="modal-title header pt-2" id="exampleModalLabel">Lens Grid</h2>  
@@ -917,9 +915,7 @@
         <div class="row">
             <div class="col-12 mx-auto" style="overflow: auto; height: 530px; width: 100%;">
                 <!-- product-quantity-grid.component.html -->
-
                 <div *ngIf="item.ProductName != 'Sv' " class="row ms-3">
-
                     <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                         <mat-form-field class="example-full-width mb-0">
                             <mat-label>Axis</mat-label>
@@ -950,10 +946,8 @@
                             </mat-select>
                         </mat-form-field>
                     </div>
-            
-                  </div>
+                </div>
 
-                  
                   <div class="container p-0" *ngIf="dataSource.length">
                     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" style=" width: 99%;">
                       <!-- CYL Column -->
@@ -961,7 +955,6 @@
                         <th mat-header-cell *matHeaderCellDef style="font-size: 18px;color:rgb(0 0 0); border: 1px solid; padding: 0;text-align: center !important;"> SPH <br> CYL </th>
                         <td mat-cell *matCellDef="let element" style="font-size: 16px;border: 1px solid   ;  padding: 3px;  text-align: center !important; font-weight: 500;background-color: #dddddd;"> {{element.cyl}} </td>
                       </ng-container>
-                  
                       <!-- Dynamic Columns for SPH -->
                       <ng-container *ngFor="let sph of sphValues" [matColumnDef]="sph">
                         <th mat-header-cell *matHeaderCellDef style="font-size: 16px; padding-top: 10px; color: rgb(0 0 0); border: 1px solid; text-align: center !important; background-color: #dddddd;"> {{sph}} </th>
@@ -969,15 +962,10 @@
                           <input class="inputBoxTD" type="number" [(ngModel)]="element[sph]" min="0" (change)="qtyAdd(sph, element.cyl,element[sph],lens)" style="border: none !important;background: none;" />
                         </td>
                       </ng-container>
-                  
                       <tr mat-header-row *matHeaderRowDef="displayedColumns" style="height: 0px; "></tr>
                       <tr mat-row *matRowDef="let row; columns: displayedColumns;" style="height: 0px;"></tr>
                     </table>
-
-
-                  
                   </div>
-                  
 
             </div>
 
@@ -1010,7 +998,6 @@
                     </mat-form-field>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
-
                     <mat-form-field *ngIf="lens.GSTPercent !== 0" class="example-full-width mb-0">
                         <mat-label>TAX Type</mat-label>
                         <mat-select name="GSTtype" [(ngModel)]="lens.GSTtype" #GSTTypeacontrol required>
@@ -1021,7 +1008,6 @@
                             </span>
                         </mat-select>
                     </mat-form-field>
-
                     <mat-form-field *ngIf="lens.GSTPercent  === 0" class="example-full-width mb-0">
                         <mat-label>TAX Type</mat-label>
                         <mat-select name="GSTtype" [(ngModel)]="lens.GSTtype" #GSTTypeacontrol required>
@@ -1052,10 +1038,7 @@
                 <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                     <button mat-raised-button color="primary" [disabled]="lens.purchasePrice == 0" (click)="purchase('save')">Purchase</button>
                 </div>
-             
-               
             </div>  
-            
         </div>
     </div>
 </ng-template>
