--- a/web1/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web1/src/app/inventory/purchase-list/purchase-list.component.html
@@ -118,11 +118,20 @@
                               <i class="fas fa-info-circle" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
                               </i>
                             </button>
-                            <button *ngIf="editPurchaseList" class="bg-btn"
-                              [routerLink]="['/inventory/purchase',data.ID]">
-                              <mat-icon class="edit_icon ms-1">edit
-                              </mat-icon>
-                            </button>
+                            <span *ngIf="data.isGrid == 0">
+                              <button *ngIf="editPurchaseList" class="bg-btn" [routerLink]="['/inventory/purchase',data.ID]">
+                                <mat-icon class="edit_icon ms-1">edit</mat-icon>
+                              </button> 
+                            </span>
+
+                            <span *ngIf="data.isGrid == 1">
+                              <button *ngIf="editPurchaseList" class="bg-btn" [routerLink]="['/inventory/lens-grid-view',data.ID]">
+                                <mat-icon class="edit_icon ms-1">edit</mat-icon>
+                              </button> 
+                            </span>
+
+                       
+
                             <button *ngIf="deletePurchaseList" class="bg-btn" (click)="deleteItem(i)">
                               <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                             </button>
