--- a/web1/src/app/report/gst-report/gst-report.component.html
+++ b/web1/src/app/report/gst-report/gst-report.component.html
@@ -282,6 +282,9 @@
                                         <button class="me-3 ms-3"  *ngIf="FilterTypes === 'Month'" type="button"  mat-raised-button color="primary" (click)=" generateInvoiceNo()">
                                             GST-PDF
                                         </button>
+                                        <button class=""  *ngIf="FilterTypes === 'Month'" type="button"  mat-raised-button color="primary" (click)=" generateInvoiceNoExcel()">
+                                            GST-Excel
+                                        </button>
                                     </div>
                                 </div>
                             </form>
