--- a/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.css
+++ b/web1/src/app/inventory/lens-grid-view/lens-grid-view.component.css
@@ -126,7 +126,18 @@ input::-webkit-inner-spin-button {
     width: 100%;
     text-align: center;
   }
+
+
   
+  .highlight-column {
+    background-color: #6186ff !important;
+  }
+  
+  .highlight-row td {
+    background-color: #6186ff !important;
+  }
+  
+
   .mat-elevation-z8 {
     box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 0%), 0px 8px 10px 1px rgb(0 0 0 / 0%), 0px 3px 14px 2px rgb(0 0 0 / 0%) !important; 
 }
